v0.4.0 – Mejoras masivas en UX, modales genéricos, fixes en mapa, JWT, formularios y panel admin